@@ -1,23 +1,27 @@
 package com.spotify.gradle.bazel.tasks;
 
+import static org.gradle.util.GUtil.map;
+
 import com.spotify.gradle.bazel.BazelLeafConfig;
 
 import org.gradle.api.DefaultTask;
 import org.gradle.api.Project;
+import org.gradle.api.Task;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.TaskAction;
+import org.gradle.wrapper.Download;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
-
-import static org.gradle.util.GUtil.map;
+import java.net.URI;
+import java.util.Locale;
+import java.util.Set;
 
 /**
  * A Gradle task that download Bazel from the provided URL.
- * See {@link #injectDownloadTasks(Project, BazelLeafConfig.Decorated)} for default usage.
+ * See {@link #injectDownloadTask(Project, BazelLeafConfig.Decorated)} for default usage.
  */
 public class DownloadBazelTask extends DefaultTask {
     private static final Logger LOGGER = LoggerFactory.getLogger(DownloadBazelTask.class);
@@ -59,10 +63,8 @@ public class DownloadBazelTask extends DefaultTask {
         LOGGER.info("Downloading Bazel binary from %s to %s...", mDownloadUrl, mTargetFile);
 
         try {
-            getAnt().invokeMethod("get", map(
-                    "src", new URL(mDownloadUrl),
-                    "dest", mTargetFile,
-                    "retries", 2));
+            Download downloader = new Download(new DownloadProgressLogger(), "bazel-leaf", "0.0.1");
+            downloader.download(URI.create(mDownloadUrl), mTargetFile);
 
             getAnt().invokeMethod("chmod", map(
                     "file", mTargetFile,
@@ -77,27 +79,70 @@ public class DownloadBazelTask extends DefaultTask {
      * Essentially, will look at `gradle.properties` file, and will create a {@link DownloadBazelTask} for each configured
      * platform (donated by `bazel.bin.url.linux`, `bazel.bin.url.macos` and `bazel.bin.url.windows`).
      */
-    public static void injectDownloadTasks(Project project, BazelLeafConfig.Decorated config) {
+    public static DownloadBazelTask injectDownloadTask(Project project, BazelLeafConfig.Decorated config) {
         Project rootProject = project.getRootProject();
 
-        injectTask(rootProject, "downloadBazelLinux", rootProject.getProperties().get("bazel.bin.url.linux"), config.bazelBin);
-        injectTask(rootProject, "downloadBazelMacOs", rootProject.getProperties().get("bazel.bin.url.macos"), config.bazelBin);
-        injectTask(rootProject, "downloadBazelWindows", rootProject.getProperties().get("bazel.bin.url.windows"), config.bazelBin);
+        final String osName = System.getProperty("os.name", "none").toLowerCase(Locale.US);
+        final Object urlPropertyName;
+
+        if (osName.contains("mac") || osName.contains("darwin")) {
+            LOGGER.info("Detected macOS.");
+            urlPropertyName = rootProject.getProperties().get("bazel.bin.url.macos");
+        } else if (osName.contains("win")) {
+            LOGGER.info("Detected Windows.");
+            urlPropertyName = rootProject.getProperties().get("bazel.bin.url.windows");
+        } else {
+            LOGGER.info("Detected Linux.");
+            urlPropertyName = rootProject.getProperties().get("bazel.bin.url.linux");
+        }
+
+        return injectTask(rootProject, urlPropertyName, config.bazelBin);
     }
 
-    private static void injectTask(
-            Project rootProject,
-            String taskName,
-            Object urlValue,
-            String bazelBinPath) {
+    private static DownloadBazelTask injectTask(Project rootProject, Object urlValue, String bazelBinPath) {
         if (urlValue instanceof String && !((String) urlValue).isEmpty()) {
             final String url = (String) urlValue;
-
-            if (rootProject.getTasksByName(taskName, false).isEmpty()) {
-                final DownloadBazelTask downloadBazelTask = rootProject.getTasks().create(taskName, DownloadBazelTask.class);
+            final String downloadBazelTaskName = "downloadBazel";
+            final Set<Task> tasksByName = rootProject.getTasksByName(downloadBazelTaskName, false);
+            if (tasksByName.isEmpty()) {
+                final DownloadBazelTask downloadBazelTask = rootProject.getTasks().create(downloadBazelTaskName, DownloadBazelTask.class);
                 downloadBazelTask.setDownloadUrl(url);
                 downloadBazelTask.setTargetFile(new File(bazelBinPath));
+
+                return downloadBazelTask;
+            } else {
+                return (DownloadBazelTask) tasksByName.stream().findFirst().get();
             }
+        }
+
+        return null;
+    }
+
+    private static class DownloadProgressLogger extends org.gradle.wrapper.Logger {
+        private DownloadProgressLogger() {
+            super(false);
+            append("Downloading Bazel binary...");
+        }
+
+        @Override
+        public Appendable append(char c) {
+            super.append(c);
+            System.out.flush();
+            return this;
+        }
+
+        @Override
+        public Appendable append(CharSequence csq) {
+            super.append(csq);
+            System.out.flush();
+            return this;
+        }
+
+        @Override
+        public Appendable append(CharSequence csq, int start, int end) {
+            super.append(csq, start, end);
+            System.out.flush();
+            return this;
         }
     }
 }
